Bug 1399833 - set default values for variables controlled by Preferences. r=padenot

This is needed for Servo's gecko-media where there is no support for
Mozilla Preferences.

MozReview-Commit-ID: HbDT42SRrE3